--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
+        <ul>
+            <li><a href="recipes/ayam-bakar-gurih.html">Ayam Bakar Gurih</a></li>
+            <li><a href="recipes/gurame-bakar.html">Gurame Bakar</a></li>
+            <li><a href="recipes/udang-saus-tiram.html">Udang Saus Tiram</a></li>
+        </ul>
     </body>
 </html>
